updated to do list

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -495,7 +495,7 @@ nav {
 /*TO DO LIST!!!!!!!!!!!!!!!!!!!!*/
 
 
-/* 1. change all block names, captions on ziwei*/ 
+/* 1. fix block captions and titles*/ 
 /* add arena images thumbnails and make sure they work */
 
 /*2. Fix aesthetic of modal - image, then title and description on right side */
