--- a/assets/styles.css
+++ b/assets/styles.css
@@ -434,6 +434,69 @@ dialog [open] {
 }
 
 
+dialog{
+  width: 200px;
+  height: 400px;
+  background-color: var(--color--quartery);
+  position:fixed;
+  top: 50%;
+  left: 50%;
+  z-index:10000;
+  transform: translate(-50%, -50%);
+}
+.dialog-image-div{
+  padding: 1em;
+  object-fit: contain;
+  object-position: left;
+}
+
+dialog  img{
+  max-width: 500px;
+  max-height: 380px;
+  max-width: 40%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  top: -320px;
+  margin-left: 3%;
+} 
+.close{
+  z-index:50000000;
+  position: fixed;
+  text-align: right;
+  top: 0px;
+  right: 0;
+  padding: 5px;
+  font-size: 40px;
+}
+.external-link{
+  position: relative;
+  left: 62.5%;
+  width: 40%;
+  margin-top: 5%;
+}
+
+dialog p{
+  position: relative;
+  left: 60%;
+  width: 40%;
+  margin-top: 5%;
+
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 75%); 
+  backdrop-filter: blur(8px); 
+}
+
+body:has(dialog[open]){
+  overflow: hidden;
+}
+
+.image-block:has(dialog[open]) figure {
+ filter: blur(1px);
+}
+
 img {
   max-block-size: 250px;
   max-inline-size: 250px;
@@ -495,6 +558,8 @@ nav {
     width: 1000px;
     height: 500px;
   }
+  
+  
 
   :root {
   --title-size: 9em;
