--- a/assets/styles.css
+++ b/assets/styles.css
@@ -247,30 +247,25 @@ p, a{
 }
 
 dialog{
-  width: 200px;
-  height: 400px;
+  width: 800px;
+  height: auto;
   background-color: var(--color--quartery);
   position:fixed;
   top: 50%;
   left: 50%;
   z-index:10000;
   transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 10px;
 }
 .dialog-image-div{
-  padding: 1em;
-  object-fit: contain;
-  object-position: left;
+  object-fit: cover;
 }
 
 dialog  img{
-  max-width: 500px;
-  max-height: 380px;
-  max-width: 40%;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  top: -320px;
-  margin-left: 3%;
+  max-height: 100%;
+  max-width: 100%;
+  margin: auto;
 } 
 .close{
   z-index:50000000;
@@ -281,6 +276,7 @@ dialog  img{
   padding: 5px;
   font-size: 40px;
 }
+
 .external-link{
   position: relative;
   left: 62.5%;
@@ -288,10 +284,7 @@ dialog  img{
   margin-top: 5%;
 }
 dialog p{
-  position: relative;
-  left: 60%;
-  width: 40%;
-  margin-top: 5%;
+  font-size: 12px
 
 }
 
@@ -574,40 +567,47 @@ nav {
   .dialog-image-div{
     padding: 1em;
     object-fit: contain;
-    object-position: left;
+  object-position: left;
   }
   
   dialog  img{
     max-width: 500px;
     max-height: 380px;
     max-width: 40%;
-    position: relative;
+    position: fixed;
+    top: 50px;
     margin-left: auto;
     margin-right: auto;
-    top: -320px;
     margin-left: 3%;
   } 
+
   .close{
     z-index:50000000;
     position: fixed;
-    text-align: right;
-    top: 0px;
-    right: 0;
-    padding: 5px;
+    padding: 30px;
+    top:-20px;
     font-size: 40px;
   }
   .external-link{
-    position: relative;
-    left: 62.5%;
-    width: 40%;
-    margin-top: 5%;
+    position: fixed;
+    left: 55%;
+    width: 45%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    padding: 10px;
+    bottom: 0px;
+    right: 0;
   }
   
   dialog p{
     position: relative;
-    left: 60%;
-    width: 40%;
+    left: 50%;
+    width: 45%;
     margin-top: 5%;
+    font-size: 16px;
+    padding: 0px;
   
   }
   
