water backgrounf on dialog

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -36,8 +36,9 @@
   --color--green-3: #237623;
   --color--green-4: #042604;
   
-  --color--blue: rgb(69, 121, 232);
-  --color--blue-light: rgb(159, 185, 240);
+  --color--blue: rgb(68, 122, 238);
+  --color-dark-blue: rgb(8, 39, 107);
+  --color--blue-light: rgb(103, 144, 232);
   
   ;       
   
@@ -186,6 +187,7 @@ p, a{
 
 .count {
   text-align: center;
+  color:white;
 }
  #channel-blocks {
   display: grid;
@@ -289,8 +291,9 @@ dialog p{
 }
 
 dialog::backdrop {
-  background-color: rgb(0 0 0 / 75%); 
-  backdrop-filter: blur(8px); 
+  background-color: rgba(230, 221, 221, 0.75); 
+  backdrop-filter: blur(10px); 
+  background-image: url('../images/water.gif');
 }
 
 body:has(dialog[open]){
@@ -392,10 +395,10 @@ body:has(dialog[open]){
 
 #show-links-button:hover, #show-video-button:hover, #show-text-button:hover, #show-image-button:hover, #show-all-button:hover {
   font-family: cinzel;
-  color: var(--color--blue);
+  color: var(--color-dark-blue);
   font-size: 20px;
   cursor: pointer;
-  text-shadow:2px 1px 1px rgb(122, 151, 226);
+  text-shadow:2px 1px 1px rgb(43, 71, 141);
 }
 
 
@@ -481,8 +484,10 @@ dialog p{
 }
 
 dialog::backdrop {
-  background-color: rgb(0 0 0 / 75%); 
-  backdrop-filter: blur(8px); 
+  background-color: rgba(235, 225, 225, 0.75); 
+  opacity: 10%;
+  background-image: url('../images/water.gif');
+  backdrop-filter: blur(10px); 
 }
 
 body:has(dialog[open]){
@@ -499,10 +504,11 @@ img {
 }
 
 footer {
-  background-color: var(--color--green-2 );
+  background-color: var(--color--green-3 );
   display: flex;
   padding: var(--spacing);
   justify-content: space-between;
+  color: var(--color--quartery);
 }
 
 nav {
@@ -567,6 +573,7 @@ nav {
     left: 50%;
     z-index:10000;
     transform: translate(-50%, -50%);
+    border: 1px solid var(--color--tertiary);
   }
   .dialog-image-div{
     padding: 1em;
