--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,7 +61,7 @@
     margin-top: 0px;
   }
   50% {
-    margin-top: 15px;
+    margin-top: 5px;
   }
   100% {
     margin-top: 0px;
@@ -151,11 +151,11 @@ height: 100%;
 
 .bottom {
   background-color: var(--color--blue);
-  padding-bottom: 6em;
+  padding-bottom: 10em;
   padding-left: 4em;
   padding-right: 4em;
 }
-}
+
 
 .full {
   background-image: url(../images/default.jpg); 
@@ -271,15 +271,14 @@ p, a{
 }
 
 dialog{
-  width: 500px;
-  height: auto;
+  width: 90vw;
+  height: 70vh;
   background-color: var(--color--quartery);
   position:fixed;
   top: 50%;
   left: 50%;
   z-index:10000;
   transform: translate(-50%, -50%);
-  box-sizing: border-box;
   padding: 10px;
 }
 .dialog-image-div{
@@ -298,7 +297,8 @@ dialog  img{
   top: 0px;
   right: 0;
   padding: 5px;
-  font-size: 40px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .external-link{
@@ -454,7 +454,7 @@ dialog [open] {
 }
 
 
-dialog{
+/* dialog{
   width: 200px;
   height: 400px;
   background-color: var(--color--quartery);
@@ -463,7 +463,7 @@ dialog{
   left: 50%;
   z-index:10000;
   transform: translate(-50%, -50%);
-}
+} */
 .dialog-image-div{
   padding: 1em;
   object-fit: contain;
@@ -535,6 +535,18 @@ nav {
   flex-direction: column;
 }
 @media only screen and (min-width:800px) {
+
+  @keyframes floatAnimation {
+    0% {
+      margin-top: 0px;
+    }
+    50% {
+      margin-top: 10px;
+    }
+    100% {
+      margin-top: 0px;
+    }
+  }
 
   header {
     font-family: cinzel;
