--- a/assets/styles.css
+++ b/assets/styles.css
@@ -281,14 +281,18 @@ dialog{
   transform: translate(-50%, -50%);
   padding: 10px;
 }
-.dialog-image-div{
-  object-fit: cover;
+
+.dialog-image-div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 dialog  img{
   max-height: 100%;
   max-width: 100%;
   margin: auto;
+  display: block;
 } 
 .close{
   z-index:50000000;
@@ -309,6 +313,7 @@ dialog  img{
 }
 dialog p{
   font-size: 12px
+  
 
 }
 
@@ -602,8 +607,8 @@ nav {
 
   }
   dialog{
-    width: 900px;
-    height: 500px;
+    width: 600px;
+    height: 300px;
     background-color: var(--color--quartery);
     position:fixed;
     top: 50%;
@@ -612,10 +617,9 @@ nav {
     transform: translate(-50%, -50%);
     border: 1px solid var(--color--tertiary);
   }
+
   .dialog-image-div{
-    padding: 1em;
-    object-fit: contain;
-  object-position: left;
+display: none;
   }
   
   dialog  img{
@@ -651,8 +655,8 @@ nav {
   
   dialog p{
     position: relative;
-    left: 50%;
-    width: 40%;
+    left: 10%;
+    width: 80%;
     font-size: 14px;
     padding: 0px;
     color: var(--color--green-4);
@@ -660,8 +664,8 @@ nav {
   }
 
 .text-pop-up-title {
-  left: 50%;
-  width: 40%;
+  left: 10%;
+  width: 80%;
   font-size: 18px;
   font-weight: bold;
   text-align: left; 
@@ -671,8 +675,8 @@ nav {
 
 
 .dialog-title {
-  left: 50%;
-  width: 40%;
+  left: 10%;
+  width: 80%;
   font-size: 18px;
   font-weight: bold;
   text-align: left; 
