--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,7 +61,7 @@
     margin-top: 0px;
   }
   50% {
-    margin-top: 5px;
+    margin-top: 3px;
   }
   100% {
     margin-top: 0px;
@@ -229,9 +229,7 @@ p, a{
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  /* transition: all 0.3s ease; */
   animation: floatAnimation 5s ease-in-out infinite;
-  /* transition: transform 0.3s ease; */
 }
 
 #channel-blocks li::after {
@@ -239,7 +237,7 @@ p, a{
   position: absolute; 
   background-color: rgba(10, 119, 59, 0.7); 
   border-radius: 50%; 
-  pointer-events: none;
+  pointer-events: cursor;
   width: 100%;
   height: 100%;
 }
@@ -272,7 +270,7 @@ p, a{
 
 dialog{
   width: 90vw;
-  height: 70vh;
+  height: 50vh;
   background-color: var(--color--quartery);
   position:fixed;
   top: 50%;
@@ -283,9 +281,7 @@ dialog{
 }
 
 .dialog-image-div {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+ display: none;
 }
 
 dialog  img{
@@ -306,16 +302,17 @@ dialog  img{
 }
 
 .external-link{
-  position: relative;
-  left: 62.5%;
-  width: 40%;
-  margin-top: 5%;
+  position: fixed;
+  left: 55%;
+  width: 45%;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px;
+  bottom: 0;
 }
-dialog p{
-  font-size: 12px
-  
 
-}
 
 dialog::backdrop {
   background-color: rgba(230, 221, 221, 0.75); 
@@ -476,8 +473,8 @@ dialog [open] {
 }
 
 dialog  img{
-  max-width: 500px;
-  max-height: 380px;
+  max-width: 600px;
+  max-height: 480px;
   max-width: 40%;
   position: relative;
   margin-left: auto;
@@ -494,18 +491,19 @@ dialog  img{
   padding: 5px;
   font-size: 40px;
 }
-.external-link{
+/* .external-link{
   position: relative;
   left: 62.5%;
   width: 40%;
   margin-top: 5%;
-}
+} */
 
 dialog p{
   position: relative;
-  left: 60%;
-  width: 40%;
-  margin-top: 5%;
+  text-align: left;
+  width: 80%;
+  font-size: 20px;
+  color: var(--color--green-4);
 
 }
 
@@ -546,7 +544,7 @@ nav {
       margin-top: 0px;
     }
     50% {
-      margin-top: 10px;
+      margin-top: 6px;
     }
     100% {
       margin-top: 0px;
