--- a/assets/styles.css
+++ b/assets/styles.css
@@ -96,6 +96,18 @@ the shape and movement of a lilypad, and sicne I could not use transform / trans
   }
 }
 
+@keyframes floatAnimation3 {
+  0% {
+    margin-top: 0px;
+  }
+  25% {
+    margin-top: 4px;
+  }
+  75% {
+    margin-top: 0px;
+  }
+}
+
 .arrow {
   font-size: 70px ;
   padding: 1em;
@@ -285,17 +297,23 @@ p, a{
 
  #channel-blocks li:nth-child(4n) {
   animation: floatAnimation 5s ease-in-out infinite;
+  animation-delay: 0.6s;
 } 
 
-#channel-blocks li:nth-child(3n) {
-  animation: floatAnimation1 6s ease-in-out infinite;
+#channel-blocks li:nth-child(9n) {
+  animation: floatAnimation1 6s ease-out infinite;
+  animation-delay: 1s;
 }
 
 #channel-blocks li:nth-child(7n) {
-  animation: floatAnimation2 4s ease-in-out infinite;
+  animation: floatAnimation2 4s linear infinite;
+  animation-delay: 2s;
 }
 
-
+#channel-blocks li:nth-child(11n) {
+  animation: floatAnimation2 8s cubic-bezier(0.18, -0.75, 0.20, 0.55) infinite;
+  animation-delay: 4s;
+}
 
 
  #channel-blocks li::after {
